k8s/emqx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emqx
  namespace: nexus
spec:
  selector:
    app: emqx
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
    - name: mqtts
      port: 8883
      targetPort: 8883
    - name: dashboard
      port: 18083
      targetPort: 18083
